# hwcomponents

./: .buildinfo  .gitmodules  Makefile  README.md  genindex.html  hwcomponents.html  hwcomponents.scaling.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py
.doctrees/: environment.pickle  hwcomponents.doctree  hwcomponents.scaling.doctree  index.doctree  modules.doctree
.doctrees/notes/: finding_and_using_models.doctree  making_models.doctree
.github/workflows/: documentation.yml  publish.yaml
_modules/: index.html
_modules/hwcomponents/: find_models.html  hwcomponents.html  model.html  select_models.html
_modules/hwcomponents/scaling/: scalefuncs.html  techscaling.html
_sources/: index.rst.txt  modules.rst.txt
_sources/notes/: finding_and_using_models.rst.txt  making_models.rst.txt
docs/source/: conf.py  index.rst
docs/source/notes/: main.rst  (+2 more)
hwcomponents/: __init__.py  _logging.py  _model_wrapper.py  _version.py  estimator.py  estimator_wrapper.py  find_estimators.py  find_models.py  gather_estimators.py  get_energy_area.py  hwcomponents.py  logging.py  model.py  model_wrapper.py  select_estimators.py  select_models.py
hwcomponents/scaling/: __init__.py  scalefuncs.py  techscaling.py
notebooks/: 1_finding_and_using_models.ipynb  2_making_models.ipynb
notes/: finding_and_using_models.html  making_models.html
tests/: test_selection.py
tutorials/: 2_making_models.ipynb  tutorial.ipynb
tutorials/estimator_example/: README.md  setup.py
tutorials/model_example/: README.md
(+6 files in other folders)
