[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "hwcomponents"
dynamic = ["version"]
description = "Hardware Component Energy+Area Models"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    {name = "Tanner Andrulis", email = "andrulis@mit.edu"}
]
keywords = []
classifiers = []

[project.scripts]
hwcomponents = "hwcomponents.hwcomponents:_main"
hwc = "hwcomponents.hwcomponents_:main"

[tool.setuptools]
packages = ["hwcomponents", "hwcomponents.scaling"]
include-package-data = true
zip-safe = true

[tool.setuptools_scm]
write_to = "hwcomponents/_version.py"
fallback_version = "1.0.0"
version_scheme = "setup_scm_version:post_version"
local_scheme = "setup_scm_version:no_local"
